fix: Fixing up next-auth. Adding vehicle to API Gateway
