# gcp/apigateway/mystic-parking-dev/openapispec.yaml
@@ -460,3 +460,105 @@ paths:
       operationId: deleteReservation
       x-google-backend:
         address: https://deleteevent-dev-xmr67kfgoa-uk.a.run.app
+
+  /vehicle:
+    #Add a reservation
+    put:
+      tags:
+        - Reservation Management
+      responses:
+        "200":
+          description: OK
+      parameters:
+        - in: query
+          name: email
+          type: string
+          required: true
+          description: Email Address of Host
+        - in: query
+          name: cleanerid
+          type: string
+          required: false
+          description: Cleaner ID
+        - in: query
+          name: cleanername
+          type: string
+          required: false
+          description: Cleaner Name
+        - in: query
+          name: cleaneremail
+          type: string
+          required: false
+          description: Cleaner Email Address
+        - in: query
+          name: pin
+          type: string
+          required: false
+          description: Access Pin
+        - in: query
+          name: cleanerpaid
+          type: string
+          required: false
+          description: Cleaner Paid (true)
+        - in: query
+          name: guestname
+          type: string
+          required: false
+          description: Guest Name
+        - in: query
+          name: phonenum
+          type: string
+          required: false
+          description: Phone Number
+        - in: query
+          name: cleanerpaidpaymenttype
+          type: string
+          required: false
+          description: Cleaner Payment Type (cash/check/venmo)
+        - in: query
+          name: cleaning_date
+          type: string
+          required: false
+          description: Cleaning Date
+        - in: query
+          name: checkin
+          type: string
+          required: false
+          description: Check in Date (ex. 2022-10-19%2000:00:00)
+        - in: query
+          name: checkout
+          type: string
+          required: false
+          description: Check out Date (ex. 2022-10-19%2000:00:00)
+        - in: query
+          name: text_bool
+          type: string
+          required: false
+          description: Whether or not to text (true)
+        - in: query
+          name: adults
+          type: integer
+          required: false
+          description: Number of Adults
+        - in: query
+          name: children
+          type: integer
+          required: false
+          description: Number of Children
+        - in: query
+          name: infants
+          type: integer
+          required: false
+          description: Number of Infants
+        - in: query
+          name: nightlyrate
+          type: integer
+          required: false
+          description: Nightly Rate
+      summary: Add a reservation.
+      description: >
+        This operation will add a reservation.
+      operationId: addReservation
+      x-google-backend:
+        address: https://us-east4-mystic-parking.cloudfunctions.net/addvehicle-dev
+        deadline: 120.0
